# audiorex

./: .gitignore  CMakeLists.txt
examples/simple_playback/: simple_playback.cpp
include/: emitters_system.h  hardware.h
src/: emitters_system.cpp  emitters_system.h  hardware.cpp  hardware.h
